# GNN_VirtualAsset

./: README.md  contents.md  paper.md  paper_modeling.md  proj.md  pyproject.toml  requirements.txt
src/: main.py  t1_collect.py  t2_build_graph.py  t3_analyze.py  t3_graphsage.py
v1/: 1_dataprep.ipynb  2_GNN.ipynb  3_Reconstruction_Error.ipynb  4_recon_errors_SAGE_AE.ipynb  G_graph.gpickle  recon_errors_GAT_AE.csv  recon_errors_GCN_AE.csv  recon_errors_PaperGAT_AE.csv  recon_errors_SAGE_AE.csv  res_1_gnn_validation_results.csv  res_1_modeling_result.md  res_2_recon_error_result.md  res_2_recon_errors_summary.csv
v1/models/: GAT_AE.pth  GAT_AE_obj.pth  GCN_AE.pth  GCN_AE_obj.pth  PaperGAT_AE.pth  PaperGAT_AE_obj.pth  SAGE_AE.pth  SAGE_AE_obj.pth
v2/: H_summary_graph.pkl  graphsage.ipynb  graphsage.py  node_features.csv
v3/: GNN_Algorithm.ipynb
